--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/themes": "^3.2.0",
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.6",
     "input-otp": "^1.4.2",
@@ -24,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "tailwind-merge": "^3.0.1",
     "vaul": "^1.1.2",
     "wouter": "^3.5.1",
     "zod": "^3.24.1"
