--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/themes": "^3.2.0",
     "@tanstack/react-query": "^5.66.0",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
@@ -20,6 +21,7 @@
     "framer-motion": "^12.0.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
+    "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -27,6 +29,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.3",
     "vaul": "^1.1.2",
     "wouter": "^3.5.1",
     "zod": "^3.24.1"
