--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
+    "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
