--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/themes": "^3.2.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.66.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
