Add axios and cmdk dependencies; rename pet properties to Spanish in components and schema for localization support

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.66.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.0.4",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.5.2",
